@@ -31,6 +31,8 @@ import org.snipsnap.snip.SnipSpace;
 import org.snipsnap.snip.filter.SnipFormatter;
 import org.snipsnap.user.User;
 import org.snipsnap.user.UserManager;
+import org.snipsnap.util.mail.InputStreamDataSource;
+import org.snipsnap.util.log.Logger;
 
 import javax.servlet.RequestDispatcher;
 import javax.servlet.ServletException;
@@ -38,7 +40,16 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
+import javax.mail.internet.MimeBodyPart;
+import javax.mail.internet.MimeMultipart;
+import javax.mail.internet.ParameterList;
+import javax.mail.internet.ContentDisposition;
+import javax.mail.Multipart;
+import javax.mail.BodyPart;
+import javax.mail.MessagingException;
+import javax.activation.DataSource;
 import java.io.IOException;
+import java.io.InputStream;
 
 /**
  * Servlet to store snips into the database after they have been edited.
@@ -48,6 +59,29 @@ import java.io.IOException;
 public class SnipStoreServlet extends SnipSnapServlet {
   public void doPost(HttpServletRequest request, HttpServletResponse response)
     throws ServletException, IOException {
+
+    if(request.getContentType().startsWith("multipart/form-data")) {
+      System.out.println(request.getContentType());
+      InputStream in = request.getInputStream();
+      DataSource ds = new InputStreamDataSource(request.getInputStream(), request.getContentType());
+      try {
+        MimeMultipart multipart = new MimeMultipart(ds);
+        int count = multipart.getCount();
+        for(int i = 0; i < count; i++) {
+          MimeBodyPart body = (MimeBodyPart)multipart.getBodyPart(i);
+          ContentDisposition disp = new ContentDisposition(body.getHeader("Content-disposition", null));
+          System.out.println(disp.getParameter("name")+"["+disp.getParameter("filename")+","+body.getContentType()+","+body.getDisposition()+"]: '"+body.getContent()+"'");
+        }
+      } catch (MessagingException e) {
+        System.err.println(e.getMessage());
+      } catch (IOException e) {
+        System.err.println(e.getMessage());
+      }
+
+      RequestDispatcher dispatcher = request.getRequestDispatcher("/exec/edit");
+      dispatcher.forward(request, response);
+      return;
+    }
 
     String name = request.getParameter("name");
     SnipSpace space = SnipSpace.getInstance();
