@@ -132,7 +132,11 @@ public class User implements Linkable {
   // Set passwd of user. Takes unecrypted
   // passwd and then sets an encrypted version
   public void setPasswd(String passwd) {
-    this.passwd = Digest.getDigest(passwd);
+    if(passwd.length() > 30) {
+      this.passwd = passwd;
+    } else {
+      this.passwd = Digest.getDigest(passwd);
+    }
   }
 
   public String getPasswd() {
